--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,8 @@
 <resources>
     <string name="app_name">kotlin_instagram</string>
-    <string name="facebook_app_id">873009302900995</string>
-    <string name="fb_login_protocol_scheme">fb873009302900995</string>
+    <string name="facebook_app_id">502622278334025</string>
+    <string name="fb_login_protocol_scheme">fb502622278334025</string>
+    <string name="facebook_client_token">908698a9708553241fc91ab6f24c41d7</string>
 
     <!-- Sign In -->
     <string name="email">Email</string>
